--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="src/FractalPanel.jar"/>
 	<classpathentry kind="lib" path="FractalThreading.jar"/>
+	<classpathentry kind="lib" path="/Users/agnitas/git/semesterlongproject-b5-bitsplease/FractalPanel.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
